UPDATED code formatter